--- a/src/Resources/styles/front/common/core/form/input.less
+++ b/src/Resources/styles/front/common/core/form/input.less
@@ -2,7 +2,7 @@
 @input-textarea-height: @input-height * 3;
 @input-padding-vertical: 5px;
 @input-padding-horizontal: 10px;
-@input-font-size: @font-size-small;
+@input-font-size: @font-size;
 @input-font-size-label: @font-size-small;
 @input-font-color: @color-base;
 @input-border-size: 1px;
@@ -27,7 +27,7 @@
     padding: @input-padding-vertical @input-padding-horizontal;
 
     border: @input-border-size solid @input-border-color;
-    border-radius: @radius-small;
+    border-radius: @radius-medium;
     box-shadow: @box-shadow-outer;
     color: @input-font-color;
     font-size: @input-font-size;
