--- a/templates/Front/Content/Error/error.html.twig
+++ b/templates/Front/Content/Error/error.html.twig
@@ -20,7 +20,7 @@
                         </div>
                         <div class="box-promo-image__content">
                             <div class="box-promo-image__content__button">
-                                <a href="{{ url('front_homepage') }}" class="btn btn--secondary">{{ 'Pokračujte na úvodní stránku'|trans }}</a>
+                                <a href="{{ url('front_homepage') }}" class="btn">{{ 'Pokračujte na úvodní stránku'|trans }}</a>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                                 Error ID: <span id="js-error-id">{{ '{{ERROR_ID}}' }}</span>
                             </div>
                             <div class="box-promo-image__content__button">
-                                <a href="{{ url('front_homepage') }}" class="btn btn--secondary">{{ 'Pokračujte na úvodní stránku'|trans }}</a>
+                                <a href="{{ url('front_homepage') }}" class="btn">{{ 'Pokračujte na úvodní stránku'|trans }}</a>
                             </div>
                         </div>
                     </div>
