--- a/templates/Front/Inline/PickupPlace/pickupPlaceSearch.html.twig
+++ b/templates/Front/Inline/PickupPlace/pickupPlaceSearch.html.twig
@@ -20,7 +20,7 @@
                 autocomplete="off"
                 />
                 <div class="box-pickup-place__search__input__button">
-                    <button class="btn btn--success btn--with-input" type="button">
+                    <button class="btn btn--success" type="button">
                         {{ 'Vyhledat'|trans }}
                     </button>
                 </div>
