--- a/templates/Front/Content/Order/PromoCode/index.html.twig
+++ b/templates/Front/Content/Order/PromoCode/index.html.twig
@@ -12,7 +12,7 @@
             <label for="orderCoupone" class="box-preview__coupone__text input-label">{{ 'Zadejte kód'|trans }}</label>
             <div class="box-preview__coupone__code">
                 <input type="text" id="js-promo-code-input" class="box-preview__coupone__code__input input" data-apply-code-url="{{ url('front_promo_code_apply') }}">
-                <button class="box-preview__coupone__code__button btn btn--success btn--with-input" id="js-promo-code-submit-button" type="button">{{ 'Použít'|trans }}</button>
+                <button class="box-preview__coupone__code__button btn btn--success" id="js-promo-code-submit-button" type="button">{{ 'Použít'|trans }}</button>
             </div>
         </div>
     </div>
