--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -198,7 +198,7 @@
                         </div>
 
                         <div class="{{ listCssClass }}__item__add-button">
-                            {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'smallWithoutIcon'})) }}
+                            {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: product, showAmountInput: false, type: 'large'})) }}
                         </div>
                     </div>
                 </div>
