design: fix bugs and edit styleguide

--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -45,7 +45,7 @@
         margin-top: 10px;
         padding: 0 15px;
 
-        background-color: @color-primary;
+        background-color: @color-base;
         border-radius: @radius;
     }
 }
