--- a/templates/Styleguide/styleguide.html.twig
+++ b/templates/Styleguide/styleguide.html.twig
@@ -379,6 +379,10 @@
         Přidat do košíku
     </button>
 </div>
+
+<a href="#buttons" class="btn-gradient">
+    <span class="btn-gradient__in">Instagram</spam>
+</a>
                             </textarea>
                         </div>
                     </section>
