--- a/src/Resources/styles/front/common/components/in/add-to-cart.less
+++ b/src/Resources/styles/front/common/components/in/add-to-cart.less
@@ -37,6 +37,12 @@
         font-weight: 700;
         box-shadow: none;
 
+        .in-add-to-cart--small & {
+            padding: 0 @in-add-to-cart-button-padding / 2;
+
+            font-size: @font-size-extra-small - 1;
+        }
+
         &:hover {
             background-color: transparent;
         }
