--- a/src/Resources/styles/front/common/layout/layout.less
+++ b/src/Resources/styles/front/common/layout/layout.less
@@ -10,8 +10,6 @@ img {
     width: 100%;
     min-height: 100%;
 
-    background-color: @color-box;
-
     .is-safari & {
         display: block;
     }
@@ -87,7 +85,11 @@ img {
         }
 
         &--dark {
-            background: @color-primary;
+            background-color: @color-base;
+        }
+
+        &--light {
+            background-color: @color-light;
         }
     }
 
