--- a/templates/Front/Content/Stores/detail.html.twig
+++ b/templates/Front/Content/Stores/detail.html.twig
@@ -26,7 +26,7 @@
                     <div class="box-contact__block box-contact__block--no-bottom-gap">
                         <div class="box-contact__block__text">
                             <i class="svg svg-mail"></i>
-                            <a class="box-contact__block__text__link" href="mailto:{{ store.email }}">{{ store.email }}</a>
+                            <a href="mailto:{{ store.email }}">{{ store.email }}</a>
                         </div>
                         <div class="box-contact__block__info">
                             {{ 'V pracovní dny odpovídáme většinou do 2 hodin'|trans }}
