design: create local var and change social links

--- a/src/Resources/styles/front/common/components/list/socials.less
+++ b/src/Resources/styles/front/common/components/list/socials.less
@@ -1,6 +1,8 @@
 @list-socials-item-width: 143px;
 @list-socials-item-gap: 10px;
 
+@list-socials-facebook-color: #204beb;
+
 .list-socials {
     display: none;
 
@@ -29,10 +31,10 @@
             width: 100%;
 
             &--facebook {
-                border-color: #204BEB;
+                border-color: @list-socials-facebook-color;
 
                 &:hover {
-                    color: #204BEB;
+                    color: @list-socials-facebook-color;
                 }
             }
 
