--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -10,12 +10,12 @@
                             <div class="footer-top__socials">
                                 <ul class="list-socials">
                                     <li class="list-socials__item">
-                                        <a class="list-socials__item__link btn-gradient" href="https://www.facebook.com/shopsyscz/" target="_blank">
+                                        <a class="list-socials__item__link btn-gradient" href="https://www.instagram.com/shopsyscz/" target="_blank">
                                             <span class="btn-gradient__in">{{ 'Instagram'|trans }}</span>
                                         </a>
                                     </li>
                                     <li class="list-socials__item">
-                                        <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.instagram.com/shopsyscz/" target="_blank">
+                                        <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/shopsyscz/" target="_blank">
                                             {{ 'Facebook'|trans }}
                                         </a>
                                     </li>
